Bug 67183 - TpConnectionManager: fails to introspect Haze if the timing is unfortunate
Summary: TpConnectionManager: fails to introspect Haze if the timing is unfortunate
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-07-22 17:42 UTC by Simon McVittie
Modified: 2013-07-24 12:54 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
TpConnectionManager: retry introspection after CM exits, up to once (7.97 KB, patch)
2013-07-22 17:42 UTC, Simon McVittie
Details | Splinter Review

Description Simon McVittie 2013-07-22 17:42:00 UTC
Created attachment 82830 [details] [review]
TpConnectionManager: retry introspection after CM exits, up  to once

Many connection managers automatically exit after 5 seconds of
inactivity. If the CM has no .manager file *and* exits in this way
while we are introspecting it, we would previously consider it to have
failed introspection - but with sufficiently unfortunate timing,
that can result in empathy-accounts not considering Haze to exist.

To avoid this, without going into an infinite loop if the CM fails to
introspect, retry once, but only once.

---

Regression test included.
Comment 1 Guillaume Desmottes 2013-07-24 09:05:28 UTC
Comment on attachment 82830 [details] [review]
TpConnectionManager: retry introspection after CM exits, up  to once

Review of attachment 82830 [details] [review]:
-----------------------------------------------------------------

++
Comment 2 Simon McVittie 2013-07-24 12:54:52 UTC
Fixed, releasing in 0.20.4


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.